# docker-nxbuilder

./: .drone.yml  Dockerfile  Dockerfile-nodist  README.md  clang-target-wrapper.patch
override/aarch64-freebsd/: toolchain.cmake
override/etc/yum.repos.d/: Nephatrine.repo
override/foreign/FreeBSD-AMD64/: toolchain.cmake
override/foreign/FreeBSD-ARM64/: toolchain.cmake
override/foreign/FreeBSD-IA32/: toolchain.cmake
override/foreign/MacOSX10.11.sdk/: i386-toolchain.cmake  x86_64-toolchain.cmake  x86_64h-toolchain.cmake
override/i386-freebsd/: toolchain.cmake
override/llvm-mingw/aarch64-w64-mingw32/: toolchain.cmake
override/llvm-mingw/armv7-w64-mingw32/: toolchain.cmake
override/llvm-mingw/i686-w64-mingw32/: toolchain.cmake
override/llvm-mingw/x86_64-w64-mingw32/: toolchain.cmake
override/msvc/arm/: toolchain.cmake
override/msvc/arm64/: toolchain.cmake
override/msvc/x64/: toolchain.cmake
override/msvc/x86/: toolchain.cmake
override/opt/cross-tools/: android-amd64.cmake  android-arm64.cmake  android-armv7.cmake  android-ia32.cmake  darwin-amd64-haswell.cmake  darwin-amd64.cmake  darwin-ia32.cmake  djgpp-ia32.cmake  dosbox.conf  freebsd-amd64.cmake  freebsd-arm64.cmake  freebsd-ia32.cmake  haiku-amd64.cmake  haiku-ia32.cmake  haiku-x86_64.cmake  linux-amd64-libc++.cmake  linux-amd64-x32.cmake  linux-arm64.cmake  linux-armv7.cmake  (+14 more)
override/osx-cross/: o32-toolchain.cmake  o64-toolchain.cmake  o64h-toolchain.cmake
override/usr/src/hello/: CMakeLists.txt  hello.cpp  hello.hpp  hello.main.cpp
override/x86_64-freebsd/: toolchain.cmake
(+103 files in other folders)
