cmake_minimum_required(VERSION 3.9)
project(hello)
include(GenerateExportHeader)
add_library(hello SHARED hello.cpp)
target_include_directories(hello PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
generate_export_header(hello)
add_executable(hello-test hello.main.cpp)
target_link_libraries(hello-test PRIVATE hello)
add_test(NAME hello-test COMMAND "$<TARGET_FILE:hello-test>")
enable_testing()
